[project]
name = "EvtxReader"
version= "1.0.0"
description= "Python Module for parsing and reading Windows Evtx files"


[tool.setuptools]
package-dir = {"" = "src"}
    # directory containing all the packages (e.g.  src/mypkg1, src/mypkg2)

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

