[project]
name = "EvtxReader"
authors = [{name = "Alex Lin"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
test = [ "pytest", "flit" ]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --file ./tests/evtxfiles/1.evtx"
testpaths = [ "tests" ]
