[project]
name = "EvtxReader"
authors = [{name = "Alex Lin"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "flit",
    "pytest-cov",
    "black",
    "isort",
    "flake8"
]
test = ["pytest>=6.0"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --file ./tests/evtxfiles/1.evtx"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
